# ida_rust_plugin

./: .gitignore  Cargo.toml  build.rs
src/: lib.rs
src/include/: allins.hpp  auto.hpp  bytes.hpp  compress.hpp  config.hpp  dbg.hpp  demangle.hpp  diskio.hpp  entry.hpp  enum.hpp  err.h  exehdr.h  expr.hpp  fixup.hpp  fpro.h  frame.hpp  funcs.hpp  gdl.hpp  graph.hpp  help.h  ida.hpp  ida_highlighter.hpp  idd.hpp  idp.hpp  ieee.h  intel.hpp  jumptable.hpp  kernwin.hpp  lex.hpp  lines.hpp  llong.hpp  loader.hpp  moves.hpp  nalt.hpp  name.hpp  netnode.hpp  network.hpp  offset.hpp  parsejson.hpp  pro.h  (+14 more)
